--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,79 +1,68 @@
 name: React CI-CD Pipeline
- 
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "**" ]
- 
+    branches: [ "main" ]
+
 env:
-  DOCKER_IMAGE_BASE: "balasurya3777/java-script"  # UPDATED IMAGE NAME
+  DOCKER_IMAGE_BASE: "balasurya3777/java-script"
   NEXUS_URL: ":8081"
   NEXUS_REPO: "npm-releases"
   SONAR_HOST_URL: "http://16.170.207.67:9000"
- 
+
 jobs:
   build:
     runs-on: ubuntu-latest
- 
+
     steps:
-    # 1. Checkout Repository
-    - name: Checkout Repository
-      uses: actions/checkout@v3
- 
-    # 2. Setup NodeJS
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
-        cache: 'npm'
- 
-    # 3. Install Dependencies
-    - name: Install Dependencies
-      run: npm install
- 
-    # 4. SonarQube Scan
-    - name: SonarQube Scan
-      if: github.ref == 'refs/heads/master'
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR }}
-      run: |
-        npx sonar-scanner \
-          -Dsonar.projectKey=react-project \
-          -Dsonar.sources=src \
-          -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
-          -Dsonar.login=$SONAR_TOKEN
- 
-    # 5. Build React App
-    - name: Build React App
-      run: npm run build
- 
-    # 6. Upload Build Artifacts to Nexus RAW Repository
-    - name: Upload to Nexus RAW
-      env:
-        NEXUS_USER: ${{ secrets.NEXUSUNAME }}
-        NEXUS_PASS: ${{ secrets.NEXUSPW }}
-      run: |
-        echo "Uploading build files to Nexus RAW repository..."
-        cd build
-        for file in $(find . -type f); do
-          echo "Uploading: $file"
-          curl -u "$NEXUS_USER:$NEXUS_PASS" \
-            --upload-file "$file" \
-            "http://${{ env.NEXUS_URL }}/repository/${{ env.NEXUS_REPO }}/$file"
-        done
- 
-    # 7. Build Docker Image
-    - name: Build Docker Image
-      run: docker build -t ${{ env.DOCKER_IMAGE_BASE }}:0.0.1-${{ github.run_number }} .
- 
-    # 8. Login to Docker Hub
-    - name: Docker Login
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERUNAME }}
-        password: ${{ secrets.DOCKERPW }}
- 
-    # 9. Push Docker Image
-    - name: Push Docker Image
-      run: docker push ${{ env.DOCKER_IMAGE_BASE }}:0.0.1-${{ github.run_number }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build React app
+        run: npm run build
+
+      - name: Run SonarQube analysis
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
+
+      - name: Create ZIP archive
+        run: |
+          npm install --save-dev bestzip
+          npx bestzip javanew-${{ github.run_number }}.zip build/*
+
+      - name: Upload to Nexus
+        env:
+          NEXUS_USR: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PSW: ${{ secrets.NEXUS_PASSWORD }}
+        run: |
+          curl -f -u "$NEXUS_USR:$NEXUS_PSW" \
+            --upload-file javanew-${{ github.run_number }}.zip \
+            http://16.170.207.67:8081/repository/npm-releases/javanew-${{ github.run_number }}.zip
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.DOCKER_IMAGE_BASE }}:${{ github.run_number }}
+            ${{ env.DOCKER_IMAGE_BASE }}:latest
