--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -8,7 +8,6 @@ on:
 
 env:
   DOCKER_IMAGE_BASE: "balasurya3777/java-script"
-  NEXUS_URL: ":8081"
   NEXUS_REPO: "raw-releases"
   SONAR_HOST_URL: "http://16.16.146.109:9000"
 
@@ -52,8 +51,8 @@ jobs:
 
       - name: Upload to Nexus RAW repository
         env:
-          NEXUS_USR: ${{ secrets.NEXUS_USERNAME }}
-          NEXUS_PSW: ${{ secrets.NEXUS_PASSWORD }}
+          NEXUS_USR: ${{ secrets.NEXUSUNAME }}
+          NEXUS_PSW: ${{ secrets.NEXUSPW }}
         run: |
           curl -f -u "$NEXUS_USR:$NEXUS_PSW" \
             --upload-file javanew-${{ github.run_number }}.zip \
@@ -62,8 +61,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DCOKERUNAME }}
+          password: ${{ secrets.DOCKERPW }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -72,4 +71,4 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKER_IMAGE_BASE }}:${{ github.run_number }}
-            ${{ env.DOORKER_IMAGE_BASE }}:latest
+            ${{ env.DOCKER_IMAGE_BASE }}:latest
