--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,21 +16,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Setup Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm ci
 
+      # Step 4: Build React app
       - name: Build React app
         run: npm run build
 
+      # Step 5: Run SonarQube analysis
       - name: Run SonarQube analysis
         uses: sonarsource/sonarqube-scan-action@master
         env:
@@ -44,12 +49,14 @@ jobs:
             -Dsonar.exclusions=**/node_modules/**,**/build/**
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
 
+      # Step 6: Create ZIP artifact
       - name: Create ZIP archive
         run: |
           npm install --save-dev bestzip
           npx bestzip javanew-${{ github.run_number }}.zip build/*
 
-      - name: Upload to Nexus RAW repository
+      # Step 7: Upload ZIP to Nexus RAW repository
+      - name: Upload to Nexus
         env:
           NEXUS_USR: ${{ secrets.NEXUSUNAME }}
           NEXUS_PSW: ${{ secrets.NEXUSPW }}
@@ -58,17 +65,31 @@ jobs:
             --upload-file javanew-${{ github.run_number }}.zip \
             http://16.16.146.109:8081/repository/raw-releases/javanew-${{ github.run_number }}.zip
 
+      # Step 8: Download artifact for Docker build
+      - name: Download artifact from Nexus
+        env:
+          NEXUS_USR: ${{ secrets.NEXUSUNAME }}
+          NEXUS_PSW: ${{ secrets.NEXUSPW }}
+        run: |
+          curl -f -u "$NEXUS_USR:$NEXUS_PSW" \
+            -o react-build.zip \
+            http://16.16.146.109:8081/repository/raw-releases/javanew-${{ github.run_number }}.zip
+
+      # Step 9: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DCOKERUNAME }}
           password: ${{ secrets.DOCKERPW }}
 
+      # Step 10: Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
+          build-args: |
+            ARTIFACT_FILE=react-build.zip
           tags: |
             ${{ env.DOCKER_IMAGE_BASE }}:${{ github.run_number }}
             ${{ env.DOCKER_IMAGE_BASE }}:latest
